All NFC template